# modelexpress

./: README.md  rust-toolchain.toml
.github/actions/run-mx-fleet-test/: action.yml
.github/actions/run-mx-p2p-test/: action.yml
.github/actions/run-mx-stale-metadata-test/: action.yml
.github/actions/run-mx-streamer-test/: action.yml
.github/workflows/: ci.yml  modelexpress-ci-tests.yml
ci/: TEST_PLAN.md
ci/k8s/client/: conftest.py  test_p2p_artifacts.py  test_p2p_k8s.py  test_rolling_update.py
ci/k8s/server/: crd-modelmetadata.yaml  mx-server.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SGLANG.md  metadata.md
examples/: crds.yaml
examples/dynamo_p2p_transfer_k8s/: Dockerfile
examples/model_streamer_k8s/: README.md
examples/p2p_transfer_k8s/client/: README.md
helm/templates/: deployment.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
modelexpress_client/python/: README.md
modelexpress_client/python/modelexpress/: client.py  envs.py  metrics.py  p2p_pb2.py  rank_utils.py  trtllm_live_transfer.py  types.py
modelexpress_client/python/tests/: test_accelerator_backend.py  test_artifact_transfer.py  test_client.py  test_envs.py  test_k8s_service_client.py  test_patches.py  test_sglang_artifacts.py  test_sglang_loader.py  test_source_selection.py  test_types.py  test_vllm_adapter.py  (+3 more)
modelexpress_common/: Cargo.toml
modelexpress_common/proto/: p2p.proto
modelexpress_common/src/: envs.rs
modelexpress_common/src/providers/: huggingface.rs
modelexpress_server/src/: services.rs
(+58 files in other folders)
