# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "modelexpress-common"
description = "Shared utilities for Model Express client and server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
test-support = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
thiserror = "2.0"
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
jiff = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
google-cloud-storage = { workspace = true }
rustls = { workspace = true }
crc32c = { workspace = true }
fd-lock = { workspace = true }

[dev-dependencies]
google-cloud-auth = { version = "1.7.0", default-features = false }
google-cloud-gax = { workspace = true }
mockall = "0.13"
tokio-test = "0.4"
wiremock = "0.6.5"

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
